add tests to dynamic array

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.12"
 dependencies = [
     "pytest (>=8.3.4,<9.0.0)",
     "ruff (>=0.9.7,<0.10.0)",
-    "rich (>=13.9.4,<14.0.0)"
+    "rich (>=13.9.4,<14.0.0)",
+    "ipykernel (>=6.29.5,<7.0.0)"
 ]
 
 [tool.poetry]
@@ -20,3 +21,12 @@ packages = [{include = "algorithms", from = "src"}]
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+python_files = ["test_*.py"]
+addopts = [
+    "-vv", 
+    "-s",
+    "-p no:warnings",
+]
